Werkzeug Changelog
==================

Version 0.9
-----------

Relase date to be decided, codename to be chosen.

- Added support for :meth:`~werkzeug.wsgi.LimitedStream.tell`
  on the limited stream.
- :class:`~werkzeug.datastructures.ETags` now is nonzero if it
  contains at least one etag of any kind, including weak ones.
- Added a workaround for a bug in the stdlib for SSL servers.

Version 0.8.2
-------------

(bugfix release, release date to be decided)

- Fixed a problem with request handling of the builtin server
  not repsonding to socket errors properly.

Version 0.8.1
-------------

(bugfix release, released on September 30th 2011)

- Fixed an issue with the memcache not working properly.
- Fixed an issue for Python 2.7.1 and higher that broke
  copying of multidicts with :func:`copy.copy`.
- Changed hashing methodology of immutable ordered multi dicts
  for a potential problem with alternative Python implementations.

Version 0.8
-----------

Released on September 29th 2011, codename Lötkolben

- Removed data structure specific KeyErrors for a general
  purpose :exc:`~werkzeug.exceptions.BadRequestKeyError`.
- Documented :meth:`werkzeug.wrappers.BaseRequest._load_form_data`.
- The routing system now also accepts strings instead of
  dictionaries for the `query_args` parameter since we're only
  passing them through for redirects.
- Werkzeug now automatically sets the content length immediately when
  the :attr:`~werkzeug.wrappers.BaseResponse.data` attribute is set
  for efficiency and simplicity reasons.
- The routing system will now normalize server names to lowercase.
- The routing system will no longer raise ValueErrors in case the
  configuration for the server name was incorrect.  This should make
  deployment much easier because you can ignore that factor now.
- Fixed a bug with parsing HTTP digest headers.  It rejected headers
  with missing nc and nonce params.
- Proxy fix now also updates wsgi.url_scheme based on X-Forwarded-Proto.